--- a/css/styles.css
+++ b/css/styles.css
@@ -755,10 +755,14 @@ img {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+
+    transition: opacity 150ms linear,
+    visibility 150ms linear;
 }
 
 .backdrop.is-hidden {
     opacity: 0;
+    visibility: hidden;
     pointer-events: none;
 }
 
@@ -775,18 +779,37 @@ img {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
     background-color: #FFFFFF;
+
+    transition: transform 150ms cubic-bezier(0, 0, 1, 1),
+    opacity 150ms cubic-bezier(0, 0, 1, 1);
+}
+
+.backdrop.is-hidden .modal {
+    opacity: 0;
+    transform: translate(-50%, -70%);
 }
 
 .modal-button {
     position: absolute;
-    top: 8px;
-    right: 8px;
-    left: auto;
+    padding: 0;
     width: 30px;
     height: 30px;
 
+    top: 8px;
+    right: 8px;
+    left: auto;
+
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
+    cursor: pointer;
 
     background-color: #fff;
+}
+
+.modal-button-icon {
+    fill: #000000;
 }
